# ETHIOPIA

./: .gitignore  404.html  LICENSE  README.md  README.org  README.rst  code.yaml  index.html  pyproject.toml  run.out  sitemap.xml  test_config-workgraph.html  workgraph-dev.py  workgraph-shell.py
.github/workflows/: ci.yaml  publish-docs.yml  publish-pypi.yml
Parser_PoC/: parse_preview-refactor.py  parse_preview.py  parse_preview_refactor.py  run.out  svg-script.xml  test_config-questions.yaml  test_config.yaml
PoC/: parse_preview.py  svg-script.xml  test_config.yaml
docs/: mkdocs.yml
docs/src/: api.rst  conf.py  getting_started.rst  index.md  index.rst
examples/: README.md  README.rst
examples/files/configs/: example_config.yaml
examples/files/scripts/: cleanup.py  icon.py  icon.sh  main_script_atm.sh  main_script_ocn.sh
examples/prototype/: README.md  prototype_config.yaml
executables/: extpar
search/: search_index.json
src/aiida_wc/: parser.py
src/sirocco/: __init__.py  core.py  pretty_print.py  svg-interactive-script.js  svg-interactive-style.css  test.py  vizgraph.py  workgraph.py
src/sirocco/core/: __init__.py  graph_items.py  workflow.py
src/sirocco/core/_tasks/: __init__.py  icon_task.py  shell_task.py
src/sirocco/parsing/: __init__.py  _utils.py  _yaml_data_models.py
src/wcflow/: __init__.py  _utils.py  cmdline.py  core.py  parse_to_workgraph.py  prototype_config.yaml  target_dict.py  workgraph.py
src/wcflow/parsing/: _yaml_data_models.py
src/wcflow/wc/: __init__.py  _classes.py  _schema.py
stubs/isoduration/: __init__.pyi  constants.pyi  types.pyi
stubs/isoduration/formatter/: __init__.pyi  checking.pyi  exceptions.pyi  formatting.pyi
stubs/isoduration/operations/: __init__.pyi  util.pyi
stubs/isoduration/parser/: __init__.pyi  exceptions.pyi  parsing.pyi  util.pyi
tests/: conftest.py  run-example.py  test_wc_workflow.py
tests/cases/large/config/: test_config_large.yml
tests/cases/large/config/ICON/: NAMELIST_exclaim_ape_R02B04
tests/cases/large/config/scripts/: icon
tests/cases/large/data/: test_config_large.txt
tests/cases/parameters/config/: test_config_parameters.yml
tests/cases/parameters/config/ICON/: icon_master.namelist
tests/cases/parameters/data/: test_config_parameters.txt
tests/cases/small/config/: test_config_small.yml
tests/cases/small/data/: test_config_small.txt
tests/files/configs/: test_config.yaml  test_config_large.new.txt  test_config_large.txt  test_config_large.yml  test_config_large_no_icon.yml  test_config_parameters.yml  test_config_shell_args.yml  test_config_small.new.txt  test_config_small.txt  test_config_small.yaml  test_config_small.yml  test_config_small_icon_localhost.yml  test_config_small_no_icon.yml
tests/files/data/: test_config_large.txt  test_config_parameters.txt  test_config_small.txt
tests/files/scripts/: cleanup.py  cleanup.sh  icon  icon.py  merge.py  post_clean.sh  shell.sh  shell_task.sh
